# Rossman_forecast_sales

./: .gitignore  AUTHORS.md  CONTRIBUTING.rst  LICENSE.txt  README.md  pyproject.toml
Notebooks/: 0.0-Introducao.ipynb  0.1-entendimento-negocio.ipynb  1.0-Data-describe.ipynb  2.0-Feature_engineering.ipynb  2.1-mind_map_hipothesis.ipynb  3.0-EDA.ipynb  4.0-Data_preparation.ipynb  Ciclo01_project.ipynb
Notebooks/.ipynb_checkpoints/: 0.2-Feature_engineering-checkpoint.ipynb
configs/: config.py
data/: .gitignore
docs/: Entendimento_Dados.txt  Project_description.docx
tests/: test_sales_rossman.py
