[tool.poetry]
name = "sales_rossman"
version = "0.1.0"
description = ""
authors = ["KaissonFerreira <kaysson_17@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
sklearn = "^0.0"
Boruta = "^0.3"
xgboost = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
inflection = "^0.5.1"
seaborn = "^0.11.2"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
